Combining Dataset for Further Analysis

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,84 @@
 chromedriver_win32/chromedriver.exe
 chromedriver_win32/LICENSE.chromedriver
+chrome-win32/115.0.5790.98.manifest
+chrome-win32/chrome_100_percent.pak
+chrome-win32/chrome_200_percent.pak
+chrome-win32/chrome_elf.dll
+chrome-win32/chrome_proxy.exe
+chrome-win32/chrome_pwa_launcher.exe
+chrome-win32/chrome_wer.dll
+chrome-win32/chrome.dll
+chrome-win32/chrome.exe
+chrome-win32/D3DCompiler_47.dll
+chrome-win32/elevation_service.exe
+chrome-win32/First Run
+chrome-win32/icudtl.dat
+chrome-win32/libEGL.dll
+chrome-win32/libGLESv2.dll
+chrome-win32/mojo_core.dll
+chrome-win32/nacl_irt_x86_32.nexe
+chrome-win32/nacl_irt_x86_64.nexe
+chrome-win32/nacl64.exe
+chrome-win32/notification_helper.exe
+chrome-win32/resources.pak
+chrome-win32/v8_context_snapshot.bin
+chrome-win32/vk_swiftshader_icd.json
+chrome-win32/vk_swiftshader.dll
+chrome-win32/vulkan-1.dll
+chrome-win32/locales/af.pak
+chrome-win32/locales/am.pak
+chrome-win32/locales/ar.pak
+chrome-win32/locales/bg.pak
+chrome-win32/locales/bn.pak
+chrome-win32/locales/ca.pak
+chrome-win32/locales/cs.pak
+chrome-win32/locales/da.pak
+chrome-win32/locales/de.pak
+chrome-win32/locales/el.pak
+chrome-win32/locales/en-GB.pak
+chrome-win32/locales/en-US.pak
+chrome-win32/locales/es-419.pak
+chrome-win32/locales/es.pak
+chrome-win32/locales/et.pak
+chrome-win32/locales/fa.pak
+chrome-win32/locales/fi.pak
+chrome-win32/locales/fil.pak
+chrome-win32/locales/fr.pak
+chrome-win32/locales/gu.pak
+chrome-win32/locales/he.pak
+chrome-win32/locales/hi.pak
+chrome-win32/locales/hr.pak
+chrome-win32/locales/hu.pak
+chrome-win32/locales/id.pak
+chrome-win32/locales/it.pak
+chrome-win32/locales/ja.pak
+chrome-win32/locales/kn.pak
+chrome-win32/locales/ko.pak
+chrome-win32/locales/lt.pak
+chrome-win32/locales/lv.pak
+chrome-win32/locales/ml.pak
+chrome-win32/locales/mr.pak
+chrome-win32/locales/ms.pak
+chrome-win32/locales/nb.pak
+chrome-win32/locales/nl.pak
+chrome-win32/locales/pl.pak
+chrome-win32/locales/pt-BR.pak
+chrome-win32/locales/pt-PT.pak
+chrome-win32/locales/ro.pak
+chrome-win32/locales/ru.pak
+chrome-win32/locales/sk.pak
+chrome-win32/locales/sl.pak
+chrome-win32/locales/sr.pak
+chrome-win32/locales/sv.pak
+chrome-win32/locales/sw.pak
+chrome-win32/locales/ta.pak
+chrome-win32/locales/te.pak
+chrome-win32/locales/th.pak
+chrome-win32/locales/tr.pak
+chrome-win32/locales/uk.pak
+chrome-win32/locales/ur.pak
+chrome-win32/locales/vi.pak
+chrome-win32/locales/zh-CN.pak
+chrome-win32/locales/zh-TW.pak
+chrome-win32/MEIPreload/manifest.json
+chrome-win32/MEIPreload/preloaded_data.pb
